--- a/Main.css
+++ b/Main.css
@@ -1,6 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Sarabun&display=swap");
+html {
+  scroll-behavior: smooth;
+}
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 ::-webkit-scrollbar {
   display: none;
@@ -15,6 +18,7 @@
 * {
   box-sizing: border-box;
   margin: 0;
+  text-align: justify;
 }
 
 .container {
@@ -24,9 +28,10 @@
 }
 
 .img-main {
-  max-width: 50rem;
-  height: auto;
-  margin-left: 17rem;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 #name {
@@ -42,31 +47,232 @@
 }
 
 hr.hr-main {
-  width: 99vh;
-  margin-left: 21%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
   border: 1px solid black;
 }
 
-.section1 {
-  width: 100vw;
-  height: 100vh;
+.main-a {
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.section1 > div {
+/**
+* Base Variables
+*/
+/**
+* Base Settings/Overwrite Normalize
+*/
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
+h1 {
+  margin-top: 0;
+  margin-bottom: 0.25em;
+  font-size: 3.5em;
+  font-weight: 900;
+  line-height: 0.9;
+}
+
+p {
+  margin: 0;
+}
+
+a {
+  padding: 0.5em 1em;
+  font-size: 0.8em;
+  color: #a9b1b3;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 0.3em;
+  border: 1px solid #a9b1b3;
+  transition: all 0.3s ease-in;
+}
+a:hover, a:active, a:focus {
+  color: #fff;
+  background-color: #a9b1b3;
+}
+
+/**
+* Text Selection
+*/
+::-moz-selection {
+  color: #fff;
+  background-color: #d0f2ee;
+  text-shadow: none;
+}
+::selection {
+  color: #fff;
+  background-color: #d0f2ee;
+  text-shadow: none;
+}
+
+/**
+* Body
+*/
+body {
+  font-family: "Sarabun", sans-serif;
+  font-size: 100%;
+  line-height: 1.6;
+  color: #000;
+  background-color: #fff;
+}
+@media (min-width: 20em) {
+  body {
+    font-size: 102.5%;
+  }
+}
+@media (min-width: 30em) {
+  body {
+    font-size: 105%;
+  }
+}
+@media (min-width: 54em) {
+  body {
+    font-size: 107.5%;
+  }
+}
+@media (min-width: 64em) {
+  body {
+    font-size: 110%;
+  }
+}
+@media (min-width: 76.5em) {
+  body {
+    font-size: 115%;
+  }
+}
+@media (min-width: 114em) {
+  body {
+    font-size: 125%;
+  }
+}
+
+/**
+* Components
+*/
+.post {
+  min-height: 100vh;
+  width: 100%;
+  border: 0.5em solid #fff;
+}
+@media (min-width: 54em) {
+  .post {
+    display: flex;
+    height: 100vh;
+    min-height: 40em;
+  }
+}
+.post > *:first-child {
+  position: relative;
+  height: 14em;
+  background-color: #000;
+}
+@media (min-width: 30em) {
+  .post > *:first-child {
+    height: 18em;
+  }
+}
+@media (min-width: 54em) {
+  .post > *:first-child {
+    flex-basis: 50%;
+    max-width: 50%;
+    height: auto;
+  }
+}
+@media (min-width: 76.5em) {
+  .post > *:first-child {
+    flex-basis: 60%;
+    max-width: 60%;
+  }
+}
+@media (min-width: 54em) {
+  .post > *:last-child {
+    flex-basis: 50%;
+    max-width: 50%;
+  }
+}
+@media (min-width: 76.5em) {
+  .post > *:last-child {
+    flex-basis: 40%;
+    max-width: 40%;
+  }
+}
+.post__container {
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 2em;
+  overflow-y: auto;
+}
+.post__category {
+  position: relative;
+  font-weight: 600;
+  font-size: 0.9em;
+  text-transform: uppercase;
+  letter-spacing: 0.3em;
+  overflow: hidden;
+}
+.post__category:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 2px;
+  width: 3em;
+  background-color: #000;
+}
+.post__content {
+  padding: 2em 0;
+}
+@media (min-width: 54em) {
+  .post__content {
+    padding: 0 4em;
+  }
+}
+.post__header {
+  overflow: hidden;
+  display: inline-block;
+}
+.post__text {
+  font-weight: 300;
+}
+.post__link {
+  text-align: right;
+}
+
+/**
+* Helpers
+*/
+.absolute-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow: hidden;
+}
+
+.section1 {
+  background-color: #F0EAD2;
 }
 
 .section2 {
-  width: 100vw;
-  height: 100vh;
+  background-color: #F0EAD2;
 }
 
 .section3 {
-  width: 100vw;
-  height: 100vh;
+  background-color: #F0EAD2;
 }
 
 .section4 {
-  width: 100vw;
-  height: 100vh;
+  background-color: #F0EAD2;
 }/*# sourceMappingURL=Main.css.map */
