--- a/Main.scss
+++ b/Main.scss
@@ -1,6 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sarabun&display=swap');
+html{
+    scroll-behavior: smooth;
+}
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 ::-webkit-scrollbar {
@@ -16,6 +18,7 @@
 * {
     box-sizing: border-box;
     margin: 0;
+    text-align: justify;
 }
 
 .container{
@@ -25,9 +28,10 @@
 }
 
 .img-main{
-    max-width: 50rem;
-    height: auto;
-    margin-left: 17rem;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
 #name {
@@ -43,31 +47,255 @@
 }
 
 hr.hr-main{
-    width: 99vh;
-    margin-left: 21%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
     border: 1px solid black;
 }
 
-.section1{
-    width: 100vw;
-    height: 100vh;
+.main-a{
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
-.section1 > div{
-    display: flex;
+/**
+* Base Variables
+*/
+$font: 'Sarabun', sans-serif;
+
+$color-alpha: #d0f2ee;
+
+$color-black: #000;
+$color-grey: #a9b1b3;
+$color-white: #fff;
+
+$mq-xs: 20em;
+$mq-sm: 30em;
+$mq-md: 54em;
+$mq-lg: 64em;
+$mq-xl: 76.5em;
+$mq-xxl: 114em;
+
+/**
+* Base Settings/Overwrite Normalize
+*/
+*, *:before, *:after {
+    box-sizing: border-box;
+}
+
+h1 {
+    margin-top: 0;
+    margin-bottom: 0.25em;
+
+    font-size: 3.5em;
+    font-weight: 900;
+    line-height: 0.9;
+}
+
+p {
+    margin: 0;
+}
+
+a {
+    padding: 0.5em 1em;
+    font-size: 0.8em;
+    color: $color-grey;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 0.3em;
+    border: 1px solid $color-grey;
+    transition: all 0.3s ease-in;
+
+    &:hover,
+    &:active,
+    &:focus {
+        color: $color-white;
+        background-color: $color-grey;
+    }
+}
+
+
+
+/**
+* Text Selection
+*/
+::selection {
+    color: $color-white;
+    background-color: $color-alpha;
+    text-shadow: none;
+}
+
+/**
+* Body
+*/
+body {
+    font-family: $font;
+    font-size: 100%;
+    line-height: 1.6;
+    color: $color-black;
+    background-color: $color-white;
+
+    @media (min-width: $mq-xs) {
+        font-size: 102.5%;
+    }
+
+    @media (min-width: $mq-sm) {
+        font-size: 105%;
+    }
+
+    @media (min-width: $mq-md) {
+        font-size: 107.5%;
+    }
+
+    @media (min-width: $mq-lg) {
+        font-size: 110%;
+    }
+
+    @media (min-width: $mq-xl) {
+        font-size: 115%;
+    }
+
+    @media (min-width: $mq-xxl) {
+        font-size: 125%;
+    }
+}
+
+/**
+* Components
+*/
+.post {
+    min-height: 100vh;
+    width: 100%;
+
+    border: 0.5em solid $color-white;
+
+    @media (min-width: $mq-md) {
+        display: flex;
+        height: 100vh;
+        min-height: 40em;
+    }
+
+    & > *:first-child {
+        position: relative;
+        
+        height: 14em;
+        
+        background-color: $color-black;
+        
+        @media (min-width: $mq-sm) {
+        height: 18em;
+        }
+        
+        @media (min-width: $mq-md) {
+        flex-basis: 50%;
+        max-width: 50%;
+        height: auto;
+        }
+        
+        @media (min-width: $mq-xl) {
+        flex-basis: 60%;
+        max-width: 60%;
+        }
+    }
+
+    & > *:last-child {
+        
+        @media (min-width: $mq-md) {
+        flex-basis: 50%;
+        max-width: 50%; 
+        }
+        
+        @media (min-width: $mq-xl) {
+        flex-basis: 40%;
+        max-width: 40%;
+        }
+    }
+
+    &__container {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 2em;
+        
+        overflow-y: auto;
+    }
+
+    &__category {
+        position: relative;
+        font-weight: 600;
+        font-size: 0.9em;
+        text-transform: uppercase;
+        letter-spacing: 0.3em;
+        overflow: hidden;
+        
+        &:before {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        
+        height: 2px;
+        width: 3em;
+
+        background-color: $color-black;
+        }
+    }
+
+    &__content {
+        padding: 2em 0;
+        
+        @media (min-width: $mq-md) {
+        padding: 0 4em; 
+        }
+    }
+
+    &__header {
+        overflow: hidden;
+
+        display: inline-block;
+    }
+
+    &__text {
+        font-weight: 300;
+    }
+
+    &__link {
+        text-align: right;
+    }
+}
+
+/**
+* Helpers
+*/
+.absolute-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    height: 100%;
+    width: 100%;
+
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow: hidden;
+}
+
+.section1{
+    background-color: #F0EAD2;
 }
 
 .section2{
-    width: 100vw;
-    height: 100vh;
+    background-color: #F0EAD2;
 }
 
 .section3{
-    width: 100vw;
-    height: 100vh;
+    background-color: #F0EAD2;
 }
 
 .section4{
-    width: 100vw;
-    height: 100vh;
+    background-color: #F0EAD2;
 }
