--- a/Main.scss
+++ b/Main.scss
@@ -178,7 +178,7 @@ body {
     min-height: 100vh;
     width: 100%;
 
-    border: 0.5em solid $color-white;
+    border: 0.5em solid #FEFFFF;
 
     @media (min-width: $mq-md) {
         display: flex;
@@ -191,7 +191,6 @@ body {
         
         height: 14em;
         
-        background-color: $color-black;
         
         @media (min-width: $mq-sm) {
         height: 18em;
@@ -288,7 +287,7 @@ body {
 
     background-position: 50%;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     overflow: hidden;
 }
 
